--- a/vvv.html
+++ b/vvv.html
@@ -154,7 +154,7 @@
     <p><strong>Payment Status:</strong> Please complete the down payment to initiate the delivery process. Thank you for choosing Carvana Cars!</p>
 
     <div class="apply-btn">
-      <a href="tracker.html">View Tracker</a>
+      <a href="tracker.html">Apply for Delivery</a>
     </div>
 
     <div class="footer">
