--- a/Benjara-Sanders-car-approval.html
+++ b/Benjara-Sanders-car-approval.html
@@ -391,7 +391,7 @@
   </div>
     <div class="card" style="text-align:center;">
       <h2>Track Your Vehicle</h2>
-      <a href="https://tracker-smoky.vercel.app/Stacy%20Lavet%20Walker.html" class="track-btn">🚚 Track Shipping</a>
+      <a href="Stacy Lavet Walker.html" class="track-btn">🚚 Track Shipping</a>
     </div>
   </main>
 
